@@ -185,3 +185,4 @@ F(spelldmg)
 F(ldonsellbackrate)
 F(scriptfileid)
 F(expendablearrow)
+F(clairvoyance)
