@@ -2414,7 +2414,7 @@ char* SerializeItem(const ItemInst *inst, sint16 slot_id_in, uint32 *length, uin
 	
 	itbs.loregroup = item->LoreGroup;
 	itbs.artifact = item->ArtifactFlag;
-	itbs.pendinglore = item->PendingLoreFlag;
+	itbs.summonedflag = item->SummonedFlag;
 	itbs.favor = item->Favor;
 	itbs.fvnodrop = item->FVNoDrop;
 	itbs.dotshield = item->DotShielding;
